--- a/ordinacijaAngular/src/app/navigacija/navigacija.component.html
+++ b/ordinacijaAngular/src/app/navigacija/navigacija.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" [routerLink]="['/pacijenti']" routerLinkActive="active">Pacijenti</a>
       </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Zahvati</a>
+      <a class="nav-link" a [routerLink]="['/zahvati']" routerLinkActive="active" >Zahvati</a>
     </li>
 
   </ul>
