--- a/ordinacijaAngular/src/styles.css
+++ b/ordinacijaAngular/src/styles.css
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/bootswatch/dist/united/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../node_modules/ng-fullcalendar/node_modules/fullcalendar/dist/fullcalendar.min.css';
+@import '../node_modules/alertifyjs/build/css/alertify.min.css';
+@import '../node_modules/alertifyjs/build/css/themes/bootstrap.css';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
+
+
+input.ng-invalid.ng-touched{
+  border: 1px solid red;
+}
+.control-label.required:after {
+  color: #d00;
+  content: "*";
+  position: relative;
+  margin-left: 5px;
+  top:0px;
+}
+.hoverHand{
+  cursor: pointer;
+}
